Header - Change the wrapping `div` to `sly` elements

--- a/eaton.ui.apps/src/main/content/jcr_root/apps/eaton/components/structure/header/static_header.html
+++ b/eaton.ui.apps/src/main/content/jcr_root/apps/eaton/components/structure/header/static_header.html
@@ -2,9 +2,9 @@
     <div class="eaton-header">
         <!--/* Include: Full Page Drawer */*/-->
          <!--/* Outer div is added because full page drawer was taking whole component as one */-->
-        <div data-sly-unwrap="${!wcmmode.edit}">
-			<sly data-sly-resource="${'full-page-drawer' @ resourceType='eaton/components/structure/full-page-drawer'}"></sly>
-		</div>
+        <sly data-sly-unwrap="${!wcmmode.edit}">
+        	<sly data-sly-resource="${'full-page-drawer' @ resourceType='eaton/components/structure/full-page-drawer'}"></sly>
+        </sly>
         <!--/* Utility Navigation */-->
         <div class="header-utility-nav">
             <div class="container">
