fixing styles on ttil quote view

--- a/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
@@ -115,10 +115,10 @@
   }
 
   @include media-desktop-large {
-    width: calc(60% + 484px);
+    width: calc((100% - 1140px) / 2 + 1140px);
 
     &__left {
-      margin-left: calc(100% - (60% + 484px));
+      margin-left: calc((100% - 1140px) / 2);
     }
   }
 }
