--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -208,5 +208,5 @@
   .eaton-ttil-quote__left .eaton-ttil-quote__text-container { -webkit-box-ordinal-group: 2; -ms-flex-order: 1; order: 1; }
   .eaton-ttil-quote__right .eaton-ttil-quote__text-container { text-align: left; } }
 
-@media screen and (min-width: 1200px) { .eaton-ttil-quote { width: calc(60% + 484px); }
-  .eaton-ttil-quote__left { margin-left: calc(100% - (60% + 484px)); } }
+@media screen and (min-width: 1200px) { .eaton-ttil-quote { width: calc((100% - 1140px) / 2 + 1140px); }
+  .eaton-ttil-quote__left { margin-left: calc((100% - 1140px) / 2); } }
