EATON-197 fixing eyebrow padding on vertical link list on footer

--- a/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
@@ -65,7 +65,7 @@
   @include media-mobile-and-tablet {
 
     &__eyebrow {
-      margin-bottom: 60px;
+      margin-bottom: $spacing__md / 2;
     }
   }
 
