--- a/eaton.frontend/src/components/how-to-buy/css/how-to-buy.scss
+++ b/eaton.frontend/src/components/how-to-buy/css/how-to-buy.scss
@@ -16,8 +16,8 @@
     display: inline-block;
 
     img {
-      width: 100%;
-      height: auto;
+      width: $spacing__md;
+      height: $spacing__md;
     }
   }
 
@@ -32,17 +32,17 @@
   }
 
 
-
-
   @include media-desktop-and-up {
     padding-top: $spacing__lg;
 
     &__icon {
       max-width: 70px;
 
-      .icon {
-        font-size: 70px;
+      img {
+        width: 70px;
+        height: 70px;
       }
+
     }
 
     &__text-wrapper {
@@ -63,10 +63,19 @@
 
         .col-md-4 {
           flex: 0 0 33%;
+          padding: 0;
         }
 
         .col-md-8 {
           flex: 0 0 66%;
+          padding: 0;
+
+          > .row {
+
+            .col-md-6 {
+              flex: 0 0 49%;
+            }
+          }
         }
 
         .row {
