--- a/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
@@ -15,8 +15,8 @@
     display: inline-block;
 
     img {
-      width: 100%;
-      height: auto;
+      width: $spacing__md;
+      height: $spacing__md;
     }
   }
 
@@ -39,8 +39,9 @@
     &__icon {
       max-width: 70px;
 
-      .icon {
-        font-size: 70px;
+      img {
+        width: 70px;
+        height: 70px;
       }
     }
 
