--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-results/views/partials/results-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-results/views/partials/results-list.html
@@ -1,9 +1,14 @@
 <!--/* M-60: Results List */-->
 <template data-sly-template.module="${ @ data }">
 
+<!--/*
+  NOTE: data-i18n is a JSON object that contains a list i18n strings used in this View
+  - These strings are used by a JavaScript template when the user clicks "Load More"
+*/-->
 <div class="results-list"
   data-results-url="${ data.ajaxRequestUrl }"
   data-results-next-page="${ data.ajaxRequestNextPage }"
+  data-i18n='{ "goTo": "${ "Go to" @ i18n }", "download": "${ "Download" @ i18n }" }'
   >
   <div data-sly-list="${ data.results }"
     class="results-list__content">
