--- a/eaton.frontend/src/global/css/base/elements/forms/_form.scss
+++ b/eaton.frontend/src/global/css/base/elements/forms/_form.scss
@@ -11,6 +11,7 @@
     margin-bottom: 30px;
   }
 
+  // stylelint-disable-next-line selector-class-pattern
   .LV_validation_message {
     font-size: 14px;
     font-weight: 100;
@@ -38,12 +39,14 @@
       margin-bottom: 30px;
     }
 
+    // stylelint-disable-next-line selector-class-pattern
     ._100 {
-      float:left;
+      float: left;
       width: 100%;
     }
     // TWO COLUMN
 
+    // stylelint-disable-next-line selector-class-pattern
     ._50 {
       width: 100%;
       float: left;
@@ -74,6 +77,7 @@
 
   // TWO COLUMN
 
+  // stylelint-disable-next-line selector-class-pattern
   ._50_left {
     width: 100%;
     float: left;
@@ -100,6 +104,7 @@
 
     .list-order {
 
+      // stylelint-disable-next-line selector-class-pattern
       &.twoColumn {
         padding-bottom: 20px;
         float: left;
@@ -110,6 +115,7 @@
         }
       }
 
+      // stylelint-disable-next-line selector-class-pattern
       &.twoColumnLeft {
         padding-bottom: 30px;
         float: left;
@@ -165,13 +171,14 @@
     }
 
     &:checked + span::after {
-      content: '✔';
-      font-size: 2.6em;
+      content: '\E900';
+      font-size: 1.4em;
+      font-family: 'eaton-glyphicon';
       line-height: 0.8;
-      color: #005bbb;
+      color: $color__primary-blue;
       position: absolute;
       top: 2px;
-      left: 2px;
+      left: 5px;
     }
   }
 
@@ -207,7 +214,7 @@
       content: '';
       width: 18px;
       height: 18px;
-      background: #005eb8;
+      background: $color__primary-blue;
       position: absolute;
       top: -6px;
       left: -6px;
@@ -224,8 +231,8 @@
     font-weight: bold;
     max-width: 600px;
     padding: 15px 100px;
-    color: #005EB8;
-    border-color: #005EB8;
+    color: $color__primary-blue;
+    border-color: $color__primary-blue;
   }
 
   // TEXTAREA
@@ -244,6 +251,7 @@
   .choices {
     width: 100%;
     height: 50px;
+    margin-top: 10px;
 
     &__inner {
       background: #fff url('/content/dam/eaton/images/down_arrow.png') no-repeat;
@@ -271,17 +279,35 @@
     }
 
     &__item[role="option"] {
-      color: #005EB8;
+      color: $color__primary-blue;
     }
 
     &[data-type*=select-one]::after {
-      border-style: none;
+      border: 0;
     }
+  }
+
+  // MULTIPLE SELECT
+
+  select[name="multipleSelectMenu"] {
+    width: 100%;
+    margin-top: 10px;
+    color: $color__primary-blue;
+
+    option {
+      padding: 10px 20px;
+
+      &[selected="selected"] {
+        background-color: $color__secondary-gray5;
+      }
+    }
+
   }
 
   .field-wrapper.individual {
     float: left;
     width: 100%;
     clear: both;
+
   }
 }
