--- a/eaton.frontend/src/components/tabbed-menu-list/css/tabbed-menu-list.scss
+++ b/eaton.frontend/src/components/tabbed-menu-list/css/tabbed-menu-list.scss
@@ -93,7 +93,7 @@
         color: $color__primary-blue;
 
         &.active {
-          color: $color__black;
+          color: $color__primary-gray1;
 
           &.desktop.link {
             color: $color__primary-blue;
