--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -11,26 +11,43 @@
 
   &__list {
     list-style-type: none;
-    padding: 0;
+    padding: 0 0 .5rem .5rem;
   }
 
   &__list-item {
-    padding-left: 4px;
+    text-align: left;
+    display: block;
+    padding: 0;
+    padding-bottom: 1.5rem;
+
+    label.label {
+      padding: 0;
+      font-weight: normal;
+    }
+
+    input[type="radio"],
+    input[type="checkbox"] {
+      &.input--small {
+        + span::before {
+          width: 2rem;
+          height: 2rem;
+          left: 0;
+          top: -.3rem;
+        }
+
+        &:checked + span::after {
+          width: 1.2rem;
+          height: 1.2rem;
+          top: .1rem;
+          left: .4rem;
+        }
+      }
+    }
   }
 
-  &__input-checkboxes {
-    display: inline-block;
-    height: 1rem;
-    width: 1rem;
-    background: red;
-  }
-
-  &__input-radios {
-    display: inline-block;
-    height: 1rem;
-    width: 1rem;
-    background: blue;
-  }
+  // .eaton-form {
+  //
+  // }
 
   &__mobile-container {
     z-index: 40;
@@ -110,14 +127,10 @@
     border-bottom: 1px solid #e6e6e6;
   }
 
-  &__list div:last-child {
-    padding-bottom: 12px;
-  }
-
   &__header.button--reset,
   &__view-more-groups {
     cursor: pointer;
-    margin: 14px 0;
+    margin: 1.5rem 0;
     text-align: left;
     width: 100%;
 
@@ -138,12 +151,12 @@
     font-size: 18px;
   }
 
-  label,
   &__view-more-values {
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: normal;
     color: $color__primary-blue;
-    padding-left: 4px;
+    // padding-left: 4px;
+    padding: 0
   }
 
   h4 {
@@ -164,7 +177,8 @@
 
 
     &__facet-value {
-      padding-bottom: 0 !important;
+      // TODO: remove the important
+      // padding-bottom: 0 !important;
     }
 
 
