--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -67,13 +67,15 @@
 
 .faceted-navigation { position: relative; }
 
-.faceted-navigation__list { list-style-type: none; padding: 0; }
+.faceted-navigation__list { list-style-type: none; padding: 0 0 .5rem .5rem; }
 
-.faceted-navigation__list-item { padding-left: 4px; }
+.faceted-navigation__list-item { text-align: left; display: block; padding: 0; padding-bottom: 1.5rem; }
 
-.faceted-navigation__input-checkboxes { display: inline-block; height: 1rem; width: 1rem; background: red; }
+.faceted-navigation__list-item label.label { padding: 0; font-weight: normal; }
 
-.faceted-navigation__input-radios { display: inline-block; height: 1rem; width: 1rem; background: blue; }
+.faceted-navigation__list-item input[type="radio"].input--small + span::before, .faceted-navigation__list-item input[type="checkbox"].input--small + span::before { width: 2rem; height: 2rem; left: 0; top: -.3rem; }
+
+.faceted-navigation__list-item input[type="radio"].input--small:checked + span::after, .faceted-navigation__list-item input[type="checkbox"].input--small:checked + span::after { width: 1.2rem; height: 1.2rem; top: .1rem; left: .4rem; }
 
 .faceted-navigation__mobile-container { z-index: 40; background-color: #FFF; margin: 0; }
 
@@ -97,9 +99,7 @@
 
 .faceted-navigation__facet-group { border-bottom: 1px solid #e6e6e6; }
 
-.faceted-navigation__list div:last-child { padding-bottom: 12px; }
-
-.faceted-navigation__header.button--reset, .faceted-navigation__view-more-groups { cursor: pointer; margin: 14px 0; text-align: left; width: 100%; }
+.faceted-navigation__header.button--reset, .faceted-navigation__view-more-groups { cursor: pointer; margin: 1.5rem 0; text-align: left; width: 100%; }
 
 .faceted-navigation__header.button--reset .icon::before, .faceted-navigation__view-more-groups .icon::before { position: absolute; right: 33px; color: #005EB8; font-size: 12px; margin-top: 6px; }
 
@@ -107,12 +107,11 @@
 
 .faceted-navigation__facet-name { font-size: 18px; }
 
-.faceted-navigation label, .faceted-navigation__view-more-values { font-size: 14px; font-weight: normal; color: #005EB8; padding-left: 4px; }
+.faceted-navigation__view-more-values { font-size: 1.4rem; font-weight: normal; color: #005EB8; padding: 0; }
 
 .faceted-navigation h4 { font-size: 26px; font-weight: bold; margin-bottom: 12px; }
 
 @media screen and (max-width: 991px) { .faceted-navigation { padding: 60px 30px; }
-  .faceted-navigation__facet-value { padding-bottom: 0 !important; }
   .faceted-navigation__view-more-values { padding-top: 8px; }
   .faceted-navigation__header { margin: 9px 0; }
   .faceted-navigation__mobile-container { margin: 30px 0 30px; }
