--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -379,19 +379,25 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .eaton-form [type="checkbox"]:checked + span::after { content: '\E900'; font-size: 1.4em; font-family: 'eaton-glyphicon'; line-height: 0.8; color: #005EB8; position: absolute; top: 2px; left: 5px; }
 
+.eaton-form [type="checkbox"]:focus + span::before { border-color: #5a99db; -webkit-box-shadow: 0 1px 12px #85bffd; box-shadow: 0 1px 12px #85bffd; outline: 0 none; }
+
 .eaton-form input[type="radio"]:not(:checked), .eaton-form input[type="radio"]:checked { position: absolute; display: inline-block; left: -100%; }
 
 .eaton-form input[type="radio"]:not(:checked) + span, .eaton-form input[type="radio"]:checked + span { position: relative; padding-left: 30px; }
 
-.eaton-form input[type="radio"]:not(:checked) + span::before, .eaton-form input[type="radio"]:checked + span::before { content: ''; position: absolute; left: -12px; top: -12px; width: 2.5em; height: 2.5em; border: 1px solid #ddd; border-radius: 100%; background: #fff; }
+.eaton-form input[type="radio"]:not(:checked) + span::before, .eaton-form input[type="radio"]:checked + span::before { content: ''; position: absolute; left: -12px; top: -10px; width: 2.5em; height: 2.5em; border: 1px solid #ddd; border-radius: 100%; background: #fff; }
 
-.eaton-form input[type="radio"]:checked + span::after { content: ''; width: 18px; height: 18px; background: #005EB8; position: absolute; top: -6px; left: -6px; border-radius: 100%; }
+.eaton-form input[type="radio"]:checked + span::after { content: ''; width: 18px; height: 18px; background: #005EB8; position: absolute; top: -4px; left: -6px; border-radius: 100%; }
+
+.eaton-form input[type="radio"]:focus + span::before { border-color: #5a99db; -webkit-box-shadow: 0 1px 12px #85bffd; box-shadow: 0 1px 12px #85bffd; outline: 0 none; }
 
 .eaton-form input[type="submit"] { background: none; border-style: solid; display: inline-block; font-weight: bold; max-width: 600px; padding: 15px 100px; color: #005EB8; border-color: #005EB8; }
 
+.eaton-form input[type="submit"]:hover { color: #FFF; background: #005EB8; text-decoration: none; }
+
 .eaton-form textarea { display: block; margin-top: 10px; width: 100%; height: 225px; border: 1px solid #8c9aa5; }
 
-.eaton-form .choices { width: 100%; height: 50px; margin-top: 10px; }
+.eaton-form .choices { width: 100%; margin-top: 10px; }
 
 .eaton-form .choices__inner { background: #fff url("/content/dam/eaton/images/down_arrow.png") no-repeat; background-position: 98%; background-size: 12px; border-radius: 0; border: 1px solid #8c9aa5; }
 
@@ -404,6 +410,8 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 .eaton-form .choices__item[role="option"] { color: #005EB8; }
 
 .eaton-form .choices[data-type*=select-one]::after { border: 0; }
+
+.eaton-form .choices:focus { border-color: #5a99db; -webkit-box-shadow: 0 1px 12px #85bffd; box-shadow: 0 1px 12px #85bffd; outline: 0 none; }
 
 .eaton-form select[name="multipleSelectMenu"] { width: 100%; margin-top: 10px; color: #005EB8; }
 
