--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/responsive-table/css/responsive-table.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/responsive-table/css/responsive-table.css
@@ -6,7 +6,8 @@
 
 .responsive-table__cell { padding: .5rem; }
 
-@media screen and (max-width: 991px) { .responsive-table__content { margin-left: -30px; margin-right: -30px; }
+@media screen and (max-width: 991px) { .responsive-table { margin: 60px 0; }
+  .responsive-table__content { margin-left: -30px; margin-right: -30px; }
   .responsive-table .responsive-table--visible-mobile { display: -webkit-box; display: -ms-flexbox; display: flex; }
   .responsive-table__group { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
   .responsive-table__group-item { -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -ms-flex-wrap: nowrap; flex-wrap: nowrap; border-bottom: 1px solid #EEF0F2; }
@@ -14,7 +15,8 @@
   .responsive-table__cell:first-child { border-left: 0; }
   .responsive-table__group-item:first-child .responsive-table__cell { margin-left: 50%; font-weight: bold; } }
 
-@media screen and (min-width: 992px) { .responsive-table .responsive-table--visible-desktop { display: -webkit-box; display: -ms-flexbox; display: flex; }
+@media screen and (min-width: 992px) { .responsive-table { margin: 120px 0; }
+  .responsive-table .responsive-table--visible-desktop { display: -webkit-box; display: -ms-flexbox; display: flex; }
   .responsive-table__group:first-child, .responsive-table__group-item:first-child { font-weight: bold; }
   .responsive-table__group { border-bottom: 1px solid #EEF0F2; }
   .responsive-table__group-item { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; border-left: 1px solid #EEF0F2; }
