--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/upsell-products/views/view-upsell-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/upsell-products/views/view-upsell-products.html
@@ -1,5 +1,11 @@
 <sly data-sly-use.data="${ '../data/view-upsell-products-data.js' @testdata=properties.testdata }">
-    <sly data-sly-use.tpl="../../shared/templates/module-upsell-products.html">
-        <sly data-sly-call="${ tpl.module @data=data.cards }"></sly>
-    </sly>
+    <div class="related-products-component container">
+        <div class="related-products-component__text">
+            <h3>${data.header}</h3>
+            <p class="related-products-component__description">${data.description}</p>
+        </div>
+        <sly data-sly-use.tpl="../../shared/templates/module-upsell-products.html">
+            <sly data-sly-call="${ tpl.module @data=data.cards }"></sly>
+        </sly>
+    </div>
 </sly>
