--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-card.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-card-data.js">
+<sly data-sly-use.data="${'../data/view-card-data.js' @testdata=properties.testdata}">
 
   <div class="eaton-ttil-card-view">
     <div class="eaton-ttil-card-view__image">
